--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -41,7 +41,7 @@ html[xmlns] .slides {display: block;}
 /* FlexSlider Default Theme
 *********************************/
 .flexslider {overflow:hidden; position: relative; z-index:2;}
-.flexslider.top_slider {min-height:564px; background-color:white;}
+.flexslider.top_slider {min-height:564px;}
 .flexslider.top_slider:before {
 	content:'';
 	position:absolute;
@@ -290,8 +290,9 @@ html[xmlns] .slides {display: block;}
 	-ms-transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
 }
-.top_slider .col-lg-6 .contents .head-title {margin-bottom:15px; display:inline-block; font-weight:500; line-height:50px; font-size:42px;color:white; display: flex; text-align: left; justify-content: left;}
-.top_slider .col-lg-6 .contents .tagp {font-size:20px;color:white; display: flex; text-align: left;}
+.top_slider .col-lg-6 .contents .head-title {margin-bottom:15px; display:inline-block; line-height:50px; font-size:42px; display: flex; text-align: center; justify-content: center;}
+.top_slider .col-lg-6 .contents .head-title b {color:#FF8701;}
+.top_slider .col-lg-6 .contents .tagp {font-size:25px; color:#000000; display: flex; text-align: center;line-height:30px;font-weight: 300;}
 .top_slider .slide1 .flex_caption1 .title3 {margin-bottom:15px; display:inline-block; font-weight:100; line-height:80px; font-size:80px;color:black}
 .top_slider .slide1 .flex_caption1 .title4 {margin-bottom:15px; display:inline-block; width:880px; font-weight:300; line-height:34px; font-size:26px;color:black}
 
