--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 	margin: 0;
 	padding:0;
 	font-family: 'Open Sans', sans-serif;
-	font-weight:300;
+	font-weight:500;
 	font-size: 13px;
 	line-height: 20px;
 	color: #666;
@@ -53,7 +53,7 @@ body {
 .col p {
 	font-size: 20px;
 	padding-top: 20px;
-	font-weight: 300;
+	font-weight: 500;
 }
 
 .col-md-12 .row1 {
@@ -246,11 +246,10 @@ blockquote:before {content:'“'; position:absolute; left:15px; top:13px; font-s
 .btn:focus, .btn:hover {color:#333; border-color:#333;}
 
 .btn-active {background-image: linear-gradient(90deg, rgba(255,60,95,1) 26%, rgba(255,135,1,1) 100%); color:#fff; border-radius: 40px;}
-.purpose_block .container .row .btn-active {background-color:#00baa7; color:#62186A; border-color:#00baa7; border-radius: 10px;}
+/*.purpose_block .container .row .btn-active {background-color:#00baa7; color:#62186A; border-color:#00baa7; border-radius: 10px;}*/
 .purpose_block .container1 .row .btn-active {background-color:#fb133a; color:white; border-color:#fb133a; border-radius: 10px;}
-#inscricoes .purpose_block .btn-active {background-color:#fb133a; color:#fff; border-color:#fb133a; border-radius: 10px;}
 .top_slider .btn-active {background-color:#ff8701; color:#fff; border-color:#ff8701; border-radius: 40px;}
-.purpose_block .container #motivos .btn-active {background-color:#ff8701; color:#62186A; border-color:#ff8701; border-radius: 10px;}
+/*.purpose_block .container #motivos .btn-active {background-color:#ff8701; color:#62186A; border-color:#ff8701; border-radius: 10px;} */
 
 .purpose_block .container1 #colorpopup1 {background-color:white; color:#fb133a; border-color:#fb133a; border-radius: 10px;}
 .purpose_block .container1 #colorpopup2 {background-color:white; color:#ff8701; border-color:#ff8701; border-radius: 10px;}
@@ -541,14 +540,14 @@ header {
   
 
 #inscricoes .purpose_block {
-	background-image: url("../images/photo-1620912189865-1e8a33da4c5e.jpg");
+	background-image: url("../images/photo-1620912189865-1e8a33da4c5e.png");
 	background-position: center;
 	background-size: cover;
 
 }
 
 .purpose_block .container1 .row1 h2 {
-	color: white;
+	color: #FF8701;
 	font-size: 60px;
 }
 
@@ -709,7 +708,6 @@ header {
 /* __________ Clean Code __________ */
 .cleancode_block {
 	padding:96px 0 20px;
-	background-image:url(../images/clean_code_bg.png);
 	background-size:cover;
 	background-position:0 0;
 	background-attachment:fixed !important;
@@ -733,7 +731,7 @@ header {
 	font-weight:100;
 	line-height:80px;
 	font-size:80px;
-	color:#fff;
+	color:#000000;
 }
 .cleancode_block p.title1 b {font-weight:500;}
 .cleancode_block p.title b {font-weight:200;}
@@ -742,7 +740,8 @@ header {
 	font-weight:300;
 	line-height:34px;
 	font-size:26px;
-	color:white;
+	color:#000000;
+	font-weight: 500;
 }
 .cleancode_block .tab-pane {
 	display:block;
@@ -764,7 +763,7 @@ header {
 
 .cleancode_block .tab-pane.active1 {
 	height:auto;
-	padding-bottom: 5%;
+	padding-bottom: 2%;
 	transform:translateY(0);
 	-o-transform:translateY(0);
 	-ms-transform:translateY(0);
@@ -821,7 +820,17 @@ header {
 .nav-tabs li.active a,
 .nav-tabs li.active a:hover,
 .nav-tabs li.active a:focus {
-	background-color:#fff;
+	background-color:transparent;
+}
+
+ul.ul_metodologia {
+    display: flex;
+    justify-content: center;
+}
+
+ul.ul_metodologia img {
+    padding-left: 7%;
+	padding-right: 7%;
 }
 
 .nav-tabs li a:hover i {
@@ -846,7 +855,6 @@ header {
 	line-height:20px;
 	font-size:20px;
 	color:#333;
-	opacity:0;
 	transform:translateY(-30px);
 	-o-transform:translateY(-30px);
 	-ms-transform:translateY(-30px);
@@ -867,11 +875,12 @@ header {
 .purpose_block {padding:5% 0 5%; text-align: center;}
 
 .purpose_block p {
-	margin-bottom:30px;
-	font-weight:300;
-	line-height:50px;
-	font-size:30px;
-	color:#62186A;
+	margin-bottom: 30px;
+    font-weight: 500;
+    line-height: 40px;
+    font-size: 30px;
+    color: #000000;
+	padding-top: 2%;
 }
 
 #aprender .purpose_block .row4 h2 strong b {
@@ -891,22 +900,6 @@ header {
 
 .purpose_block .btn {margin-top:30px; margin-right:16px;}
 .purpose_block .btn-active {overflow:hidden;}
-.purpose_block .btn-active span:before {
-	content: attr(data-hover);
-	font-size: 40px;
-	position: absolute;
-	top: 100%;
-	left:0;
-	width:100%;
-	text-transform:uppercase;
-	text-align:center;
-	font-weight: 900;
-	line-height:20px;
-	font-size:13px;
-	color:#62186A;
-	transition: all 0.3s ease-in-out; 
-	-webkit-transition: all 0.3s ease-in-out;
-}
 
 .purpose_block .container .row .btn-active span:before {
 	content: attr(data-hover);
@@ -925,64 +918,9 @@ header {
 	-webkit-transition: all 0.3s ease-in-out;
 }
 
-.purpose_block .container1 .row .btn-active span:before {
-	content: attr(data-hover);
-	font-size: 40px;
-	position: absolute;
-	top: 100%;
-	left:0;
-	width:100%;
-	text-transform:uppercase;
-	text-align:center;
-	font-weight: 900;
-	line-height:20px;
-	font-size:13px;
-	color:#fb133a;
-	transition: all 0.3s ease-in-out; 
-	-webkit-transition: all 0.3s ease-in-out;
-}
-
-#inscricoes .purpose_block .btn-active span:before {
-	content: attr(data-hover);
-	font-size: 40px;
-	position: absolute;
-	top: 100%;
-	left:0;
-	width:100%;
-	text-transform:uppercase;
-	text-align:center;
-	font-weight: 900;
-	line-height:20px;
-	font-size:13px;
-	color:#fb133a;
-	transition: all 0.3s ease-in-out; 
-	-webkit-transition: all 0.3s ease-in-out;
-}
-
-.purpose_block .container #motivos .btn-active span:before {
-	content: attr(data-hover);
-	font-size: 40px;
-	position: absolute;
-	top: 100%;
-	left:0;
-	width:100%;
-	text-transform:uppercase;
-	text-align:center;
-	font-weight: 900;
-	line-height:20px;
-	font-size:13px;
-	color:#ff8701;
-	transition: all 0.3s ease-in-out; 
-	-webkit-transition: all 0.3s ease-in-out;
-}
-
-.purpose_block .container .row .btn-active:hover span:before {color:#62186A;font-size: 35px;}
-
 .purpose_block .container1 .row .btn-active:hover span:before {color:white;font-size: 35px;}
 
 #inscricoes .purpose_block .btn-active:hover span:before {color:white;font-size: 35px;}
-
-.purpose_block .container #motivos .btn-active:hover span:before {color:#62186A;font-size: 35px;}
 
 .purpose_block .btn-active:hover span:before {color:#fff;font-size: 35px;}
 .purpose_block .btn-active span {
@@ -992,44 +930,46 @@ header {
 	transition: all 0.3s ease-in-out; 
 	-webkit-transition: all 0.3s ease-in-out;
 }
-.purpose_block .btn-active:hover span,
-.purpose_block .btn-active:focus span {
-	color:#62186A;
-	-webkit-transform: translateY(-100%);
-	-moz-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
-
-.purpose_block .container .row .btn-active:hover span, .purpose_block .container .row .btn-active:focus span {
-	color:#00baa7;
-	-webkit-transform: translateY(-100%);
-	-moz-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
-
-.purpose_block .container1 .row .btn-active:hover span, .purpose_block .container1 .row .btn-active:focus span {
-	color:#fb133a;
-	-webkit-transform: translateY(-100%);
-	-moz-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
-
-.purpose_block .btn-active:hover span, .purpose_block .btn-active:focus span {
-	color:#fb133a;
-	-webkit-transform: translateY(-100%);
-	-moz-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
-
-.purpose_block .container #motivos .btn-active:hover span, .purpose_block .container #motivos .btn-active:focus span {
-	color:#ff8701;
-	-webkit-transform: translateY(-100%);
-	-moz-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
 
 .purpose_block .ipad_img1 {margin-top:-116px;}
 
+.atraves_da_img {
+    position: absolute;
+    padding-left: 20%;
+    padding-top: 1.7%;
+	text-align: left;
+	line-height: 30px;
+	height: 30px;
+}
+
+.atraves_da_img p {
+    font-size: 30px;
+    padding: 1%;
+	color: #000000;
+	font-weight: 500;
+}
+
+.atraves_da_img_2 {
+    position: absolute;
+	padding-top: 3%;
+    padding: 2%;
+	text-align: center;
+	line-height: 30px;
+	height: 30px;
+}
+
+.atraves_da_img_2 p {
+	text-align: justify;
+    font-size: 30px;
+    padding: 0.22%;
+	color: #000000;
+	font-weight: 500;
+	line-height: 30px;
+}
+
+p.centralizar_p {
+	text-align: center;
+}
 
 
 button.accordion {
@@ -1047,9 +987,6 @@ button.accordion {
 	margin-bottom: 0.5%;
 }
 
-button.accordion.active, button.accordion:hover {
-    background-color: #62186a;
-}
 
 div.panel {
     padding: 0 18px;
@@ -1119,6 +1056,21 @@ div.panel.show {
 	padding: 10px 20px;
   }
 
+  .col-lg-6 {
+	width: 60%;
+  }
+
+  .col-lg-6x {
+	display: flex;
+	width: 33%;
+  }
+
+  .col-lg-6y {
+	display: flex;
+	width: 33%;
+	padding-top: 2%;
+	padding-left: 7%;
+  }
 
   .top_slider .overlay {
     position: absolute;
