--- a/css/styleform.css
+++ b/css/styleform.css
@@ -44,7 +44,7 @@ form#Página1 {margin: 4%; text-align: justify;}
 .forms {display: flex; justify-content: right; padding-right: 2%; padding-left: 2%; padding-bottom: 10%; padding-top: 5%; background-repeat: repeat-y;}
 
 .msg-erro{
-    color: white; 
+    color: #FB133A; 
     margin-bottom: 4%;
 }
 
@@ -110,6 +110,11 @@ input#Telefone,input#horario {
     margin-bottom: 1%;
 }
 
+.submit_forms {
+    display: flex;
+    justify-content: center;
+}
+
 input#Documento-\(CPF\/RG\),input#capacitacao {
     background-color: white;
     margin-bottom: 1%;
@@ -123,6 +128,16 @@ input#Cidade {
 
 select#Estado {
     width: 49%;
+    padding: 10px 8px;
+    font-size: 15px;
+    color: #400a46;
+    border: 2px solid #400a46;
+    text-align: left;
+    margin-bottom: 1%;
+}
+
+select#capacitacao {
+    width: 100%;
     padding: 10px 8px;
     font-size: 15px;
     color: #400a46;
@@ -249,10 +264,8 @@ input {
 }
 
 input[type="submit"], input[type="file"] {
-    background-color: white;
-    color: #400a46;
-    font-size: 15px;
-    border-radius: 1rem;
+    border-color: #00BAA7;
+    border-width: 6px;
 }
 
 span.msg-erro.msg-envio {
