--- a/css/styleform.css
+++ b/css/styleform.css
@@ -199,6 +199,12 @@ select#Trabalha\? {
     width: 49%;
 }
 
+.video {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
 select#Necessidades-especiais\? {
     width: 100%;
     padding: 10px 8px;
